# metis-wizard

./: Dockerfile  README.md  metis_wizard.py  namelist.config  pyproject.toml
.github/workflows/: docker.yml
metis_wizard/: metis_wizard.py
