[tool.poetry]
name = "metis-wizard"
version = "0.0.0+dirty"
description = ""
authors = ["Paul Gierz <pgierz@awi.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
f90nml = "^1.4.4"
rich-click = "^1.8.3"
click-loguru = "^1.3.8"
questionary = "^2.0.1"

click = "^8.1.7"

[tool.poetry.scripts]
metis-wizard = "metis_wizard:main"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
dirty = true


[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
